# openai-f5-tts

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: server.py  test.py  tts_handler.py  utils.py  utils_infer.py
ckpts/: README.md
f5_tts_app/: cli.py
tests/: test_cli.py
