[project]
name = "f5-tts-app"
version = "0.1.0"
description = "F5-TTS Application"
requires-python = ">=3.8"
dependencies = [
    "flask",
    "gevent",
    "python-dotenv",
    "transformers>=4.46.2,<5.0.0",
    "tokenizers>=0.20.3,<1.0.0",
    "torch>=2.0.0",
    "librosa>=0.9.2",
    "soundfile>=0.11.0",
]

[project.optional-dependencies]
dev = [
   "pytest>=8.3.4"
]

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["app"]

[project.scripts]
openai-f5-tts = "app.cli:main"

[project.urls]
"F5-TTS Repository" = "https://github.com/SWivid/F5-TTS"